--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cubing": "^0.38.1",
     "react": "latest",
     "react-dom": "latest",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "latest",
     "typescript": "latest"
   },
